--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="character">
         <h2 id="character">Your character: <br> 
         <span id="characterlevel" class="hide">Level </span>
-        <span class="hide chosenrace Dwarf">Dwarf</span><span class="hide chosenrace Elf">Elf</span><span class="hide chosenrace Human">Human</span><span class="hide chosenrace Halfling">Halfling</span><span class="hide chosenrace Gnome">Gnome</span><span class="hide chosenrace Half-Orc">Half-Orc</span><span class="hide chosenrace Half-Elf">Half-Elf</span>
+        <span class="hide chosenrace Dwarf">Dwarven</span><span class="hide chosenrace Elf">Elf</span><span class="hide chosenrace Human">Human</span><span class="hide chosenrace Halfling">Halfling</span><span class="hide chosenrace Gnome">Gnome</span><span class="hide chosenrace Half-Orc">Half-Orc</span><span class="hide chosenrace Half-Elf">Half-Elf</span>
         <span class="hide chosenclass Barbarian">Barbarian</span><span class="hide chosenclass Bard">Bard</span><span class="hide chosenclass Cleric">Cleric</span><span class="hide chosenclass Druid">Druid</span><span class="hide chosenclass Fighter">Fighter</span><span class="hide chosenclass Monk">Monk</span><br><span class="hide chosenclass Paladin">Paladin</span><span class="hide chosenclass Ranger">Ranger</span><span class="hide chosenclass Rogue">Rogue</span><span class="hide chosenclass Sorcerer">Sorcerer</span><span class="hide chosenclass Wizard">Wizard</span>
         </h2>
     </div>
