--- a/index.html
+++ b/index.html
@@ -194,9 +194,18 @@
         <p><span class="btn" id="charnext">Great! Let's roll some stats</span></p>
         <p><span class="btn" id="tryagain">Try Again</span><span href="#" class="btn" id="chooseagain">Let me choose</span></p>
         <p>&nbsp;</p>
+        <div id="rolltype">
+            <h3>Standard or Heroic Stats?</h3>
+            <p><span class="btn" id="standard">Standard</span><span href="#" class="btn" id="heroic">Heroic</span></p>
+        </div>
     </div>
     <div id="stats">
-    
+        <h3>STR: <span id="str"></span> | Modifier: <span class="strmod"></span></h3>
+        <h3>DEX: <span id="dex"></span> | Modifier: <span class="dexmod"></span></h3>
+        <h3>CON: <span id="con"></span> | Modifier: <span class="conmod"></span></h3>
+        <h3>INT: <span id="int"></span> | Modifier: <span class="intmod"></span></h3>
+        <h3>WIS: <span id="wis"></span> | Modifier: <span class="wismod"></span></h3>
+        <h3>CHA: <span id="cha"></span> | Modifier: <span class="chamod"></span></h3>
     </div>
     
 </div>
