--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel='stylesheet' href='style.css'/>
     <script src='http://code.jquery.com/jquery-1.11.1.min.js'></script>
     <script src='http://code.jquery.com/ui/1.11.1/jquery-ui.min.js'></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script src='script.js'></script>
 	<link href='https://fonts.googleapis.com/css?family=Forum' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -194,10 +195,10 @@
         <p><span class="btn" id="charnext">Great! Let's roll some stats</span></p>
         <p><span class="btn" id="tryagain">Try Again</span><span href="#" class="btn" id="chooseagain">Let me choose</span></p>
         <p>&nbsp;</p>
-        <div id="rolltype">
-            <h3>Standard or Heroic Stats?</h3>
-            <p><span class="btn" id="standard">Standard</span><span href="#" class="btn" id="heroic">Heroic</span></p>
-        </div>
+    </div>
+    <div id="rolltype">
+        <h3>Standard or Heroic Stats?</h3>
+        <p><span class="btn" id="standard">Standard</span><span href="#" class="btn" id="heroic">Heroic</span></p>
     </div>
     <div id="stats">
         <h3>STR: <span id="str"></span> | Modifier: <span class="strmod"></span></h3>
