--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src='http://code.jquery.com/ui/1.11.1/jquery-ui.min.js'></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 <script src='script.js'></script>
+<script src='stats.js'></script>
 	<link href='https://fonts.googleapis.com/css?family=Forum' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
