--- a/index.html
+++ b/index.html
@@ -197,17 +197,21 @@
         <p><span class="btn" id="tryagain">Try Again</span><span href="#" class="btn" id="chooseagain">Let me choose</span></p>
         <p>&nbsp;</p>
     </div>
-    <div id="rolltype">
-        <h3>Standard or Heroic Stats?</h3>
-        <p><span class="btn" id="standard">Standard</span><span href="#" class="btn" id="heroic">Heroic</span></p>
+        <div id="rolltype">
+        <h3>How do you want to roll stats?</h3>
+        <p><span class="btn" id="classic">Classic</span><span class="btn" id="standard">Standard</span><span class="btn" id="heroic">Heroic</span>
+        <!-- This part isn't built yet, but should be
+        <span class="btn" id="dicepool">Dice Pool</span><span class="btn" id="pointbuy">Point Buy</span>
+        -->
+        </p>
     </div>
     <div id="stats">
-        <h3>STR: <span id="str"></span> | Modifier: <span class="strmod"></span></h3>
-        <h3>DEX: <span id="dex"></span> | Modifier: <span class="dexmod"></span></h3>
-        <h3>CON: <span id="con"></span> | Modifier: <span class="conmod"></span></h3>
-        <h3>INT: <span id="int"></span> | Modifier: <span class="intmod"></span></h3>
-        <h3>WIS: <span id="wis"></span> | Modifier: <span class="wismod"></span></h3>
-        <h3>CHA: <span id="cha"></span> | Modifier: <span class="chamod"></span></h3>
+        <h3>STR: <span id="str"></span> | Modifier: <span id="modstr"></span></h3>
+        <h3>DEX: <span id="dex"></span> | Modifier: <span id="moddex"></span></h3>
+        <h3>CON: <span id="con"></span> | Modifier: <span id="modint"></span></h3>
+        <h3>INT: <span id="int"></span> | Modifier: <span id="modcon"></span></h3>
+        <h3>WIS: <span id="wis"></span> | Modifier: <span id="modwis"></span></h3>
+        <h3>CHA: <span id="cha"></span> | Modifier: <span id="modcha"> | Modifier: </span></h3>
     </div>
     
 </div>
