--- a/index.html
+++ b/index.html
@@ -196,7 +196,14 @@
         <p><span class="btn" id="tryagain">Try Again</span><span href="#" class="btn" id="chooseagain">Let me choose</span></p>
         <p>&nbsp;</p>
     </div>
-        <div id="rolltype">
+    <div id="test">
+    	<p id='t1'></p>
+    	<p id='t2'></p>
+    	<p id='t3'></p>
+    	<p id='t4'></p>
+    	<p id='t5'></p>
+    </div>
+    <div id="rolltype">
         <h3>How do you want to roll stats?</h3>
         <p><span class="btn" id="classic">Classic</span><span class="btn" id="standard">Standard</span><span class="btn" id="heroic">Heroic</span>
         <!-- This part isn't built yet, but should be
@@ -210,7 +217,7 @@
         <h3>CON: <span id="con"></span> | Modifier: <span id="modint"></span></h3>
         <h3>INT: <span id="int"></span> | Modifier: <span id="modcon"></span></h3>
         <h3>WIS: <span id="wis"></span> | Modifier: <span id="modwis"></span></h3>
-        <h3>CHA: <span id="cha"></span> | Modifier: <span id="modcha"> | Modifier: </span></h3>
+        <h3>CHA: <span id="cha"></span> | Modifier: <span id="modcha"></span></h3>
     </div>
     
 </div>
