--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <h3>CON: <span id="con"></span> | Modifier: <span id="modint"></span></h3>
         <h3>INT: <span id="int"></span> | Modifier: <span id="modcon"></span></h3>
         <h3>WIS: <span id="wis"></span> | Modifier: <span id="modwis"></span></h3>
-        <h3>CHA: <span id="cha"></span> | Modifier: <span id="modcha"> | Modifier: </span></h3>
+        <h3>CHA: <span id="cha"></span> | Modifier: <span id="modcha"></span></h3>
     </div>
     <div id="specialization"></div>
     <div id="spellList"></div>
