--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <div class="container">
     <div class="header">
-        <h1>Random<img src="http://i669.photobucket.com/albums/vv59/asecord/PathfinderLogo.png" id="Pathfinder_Header" alt="Pathfinder"> <br> Character Generator</h1>
+        <h1>Random<img src="images//PathfinderLogo.png" id="Pathfinder_Header" alt="Pathfinder"> <br> Character Generator</h1>
         <h2><small>Based on Paizo's Pathfinder Roleplaying Game. <a href="http://paizo.com/pathfinderRPG/prd/"><br>Read the full rules here.</a></small><h2>
         <p>&nbsp;</p>
     </div>
