Adds step 3 of getting character
In step 3, assign characteristics for alignment, hit points, base attack bonus, and fort, ref, and will saves.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
         <h3>WIS: <span id="wis"></span> | Modifier: <span id="modwis"></span></h3>
         <h3>CHA: <span id="cha"></span> | Modifier: <span id="modcha"></span></h3>
     </div>
+		<div id="step-3" class="hide">
+			<p>
+				<!-- <span class="btn" id="rollagain">Roll again</span> Need to figure out a concise way to do this-->
+				<span class="btn" id="makeSheet">Create Character Sheet</span>
+			</p>
+		</div>
+		<div id="charactersheet">
+		</div>
     <div id="specialization"></div>
     <div id="spellList"></div>
 </div>
